--- a/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
@@ -31,7 +31,8 @@
                     </tr>
                     <tr>
                         <td>
-                            <p>@Html.Encode(ViewData["Feedback"])</p>
+                            <p>De volgende bedrijven zijn toegevoegd: @Html.Encode(ViewData["toegevoegd"])</p>
+                            <p>Reeds bekende bedrijven: @Html.Encode(ViewData["foutmelding"])</p>
 
                         </td>
                     </tr>
