--- a/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Details.cshtml
@@ -110,10 +110,18 @@
                 </tr>
                 <tr>
                     <td class="display-label">
-                        @Html.DisplayNameFor(model => model.Persoonsgegevens1.Email):
+                        @Html.DisplayNameFor(model => model.Persoonsgegevens2.Email):
                     </td>
                     <td class="display-field">
-                        @Html.DisplayFor(model => model.Persoonsgegevens1.Email)
+                        @Html.DisplayFor(model => model.Persoonsgegevens2.Email)
+                    </td>
+                </tr>
+                <tr>
+                    <td class="display-label">
+                        @Html.DisplayNameFor(model => model.Persoonsgegevens2.Bedrijf):
+                    </td>
+                    <td class="display-field">
+                        @Html.DisplayFor(model => model.Persoonsgegevens2.Bedrijf1.Naam)
                     </td>
                 </tr>
             </table>
