Koppeling datum in view fix plus de home

--- a/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Index.cshtml
@@ -27,7 +27,7 @@
                         Stagedocent
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Periode.Periode1)
+                        Periode
                     </th>
                     <th>
                         Stagebegeleider
@@ -47,7 +47,7 @@
                             @Html.DisplayFor(modelItem => item.Persoonsgegevens1.Achternaam)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Periode.Begindatum) - @Html.DisplayFor(modelItem => item.Periode.Begindatum)
+                            @Html.DisplayFor(modelItem => item.Periode.Begindatum) - @Html.DisplayFor(modelItem => item.Periode.Einddatum)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Persoonsgegevens2.Voornaam)
