--- a/PVB Stage Applicatie/Views/GespreksFormulier/Details.cshtml
+++ b/PVB Stage Applicatie/Views/GespreksFormulier/Details.cshtml
@@ -89,7 +89,7 @@
             @Html.DisplayNameFor(model => model.Gesprek)
         </div>
         <div class="display-field">
-            @Html.TextAreaFor(model => model.Gesprek)
+            @Html.TextAreaFor(model => model.Gesprek, new { disabled = "disabled" })
         </div>
 
         <table class="handtekeningen">
