--- a/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
@@ -6,105 +6,155 @@
 
 <h2>Create</h2>
 @section zijMenu{
-        <li>@Html.ActionLink("Terug", "Index")</li>
+    <li>@Html.ActionLink("Terug", "Index")</li>
 }
 
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Stagebegeleider toevoegen</h3>
 
-    <fieldset>
-        <legend>Persoonsgegevens</legend>
+        </div>
+        <div class="panel-body">
+            <div class="col-md-12">
+                <table class="table table-striped">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Voornaam)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Voornaam)
-           </td><td>@Html.ValidationMessageFor(model=> model.Voornaam)
-        </div>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Voornaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Voornaam)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Voornaam)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Achternaam)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Achternaam)
-           </td><td>@Html.ValidationMessageFor(model=> model.Achternaam)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Achternaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Achternaam)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Achternaam)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tussenvoegsel)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Tussenvoegsel)
-           </td><td>@Html.ValidationMessageFor(model=> model.Tussenvoegsel)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Tussenvoegsel)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Tussenvoegsel)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-           </td><td>@Html.ValidationMessageFor(model=> model.Email)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Email)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Email)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Email)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Straat)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Straat)
-           </td><td>@Html.ValidationMessageFor(model=> model.Straat)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Straat)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Straat)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Straat)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Huisnummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Huisnummer)
-           </td><td>@Html.ValidationMessageFor(model=> model.Huisnummer)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Huisnummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Huisnummer)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Huisnummer)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Toevoeging)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Toevoeging)
-           </td><td>@Html.ValidationMessageFor(model=> model.Toevoeging)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Toevoeging)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Toevoeging)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Toevoeging)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Postcode)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Postcode)
-           </td><td>@Html.ValidationMessageFor(model=> model.Postcode)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Postcode)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Postcode)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Postcode)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Plaats)
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Plaats)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Plaats)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Plaats)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
+                        </td>
+                        <td class="editor-field">
+                            @Html.DropDownList("Bedrijf", String.Empty)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Bedrijf)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="submit" value="Create" />
+                        </td>
+                        <td colspan="2">@Html.Encode(ViewData["Foutmelding"])</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Plaats)
-           </td><td>@Html.ValidationMessageFor(model=> model.Plaats)
         </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Bedrijf", String.Empty)
-           </td><td>@Html.ValidationMessageFor(model=> model.Bedrijf)
-        </div>
-
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
-    </fieldset>
-}
+        }
 
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        @section Scripts {
+            @Scripts.Render("~/bundles/jqueryval")
+        }
